tests/baselines/reference/unusedFunctionsinNamespaces3.errors.txt
tests/cases/compiler/unusedFunctionsinNamespaces3.ts(2,9): error TS6133: 'function1' is declared but never used.
tests/cases/compiler/unusedFunctionsinNamespaces3.ts(2,30): error TS6133: 'param1' is declared but never used.


==== tests/cases/compiler/unusedFunctionsinNamespaces3.ts (2 errors) ====
    namespace Validation {
        var function1 = function(param1:string) {
            ~~~~~~~~~
!!! error TS6133: 'function1' is declared but never used.
                                 ~~~~~~
!!! error TS6133: 'param1' is declared but never used.
        }
    }